save jdk 24 work to date